--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ name: Docker
 
 on:
   schedule:
-    - cron: '45 13 * * *'
+    - cron: '45 13 * * 1'
   push:
     branches: [ main ]
     # Publish semver tags as releases.
