--- a/.github/workflows/check-new-tags.yml
+++ b/.github/workflows/check-new-tags.yml
@@ -21,16 +21,6 @@ jobs:
         git ls-remote --tags https://github.com/xo/usql.git | awk '{print $2}' | sed 's#refs/tags/##' | sort -V > tags.txt
       shell: bash
 
-    - name: Load Previously Stored Tags
-      id: load-prev-tags
-      run: |
-        if [ -f .github/tags.txt ]; then
-          sort .github/tags.txt -o .github/tags.txt
-          cat .github/tags.txt
-        else
-          echo "No previous tags file found."
-        fi
-
     - name: Compare Tags
       id: compare-tags
       run: |
@@ -38,24 +28,35 @@ jobs:
           new_tag=$(comm -13 .github/tags.txt tags.txt | tail -n 1)
           echo "$new_tag" > new_tag.txt
         else
-          cp tags.txt new_tag.txt
+          tail -n 1 tags.txt > new_tag.txt
         fi
         echo "new_tag=$(cat new_tag.txt)" >> $GITHUB_ENV
-        echo "::set-output name=new_tag::$(cat new_tag.txt)"
+        echo "new_tag=$(cat new_tag.txt)" >> $GITHUB_OUTPUT
+
+    - name: Store Current Tags
+      run: |
+        cp tags.txt .github/tags.txt
+      shell: bash
 
     - name: Commit Updated Tags File
       run: |
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git add .github/tags.txt
-        git commit -m "Update tags list"
-        git push
+        if ! git diff --quiet; then
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add .github/tags.txt
+          git commit -m "Update tags list"
+          git push
+        else
+          echo "No changes to commit"
+        fi
       shell: bash
 
   build-and-push-docker-image:
     runs-on: ubuntu-latest
     needs: check-new-tags
     if: ${{ needs.check-new-tags.outputs.new_tag != '' }}
+    outputs:
+      image_tag: ${{ steps.build.outputs.image_tag }}
 
     steps:
     - name: Checkout Repository
@@ -63,6 +64,15 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+
+    - name: Cache Docker layers
+      id: cache-docker-layers
+      uses: actions/cache@v3
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -75,26 +85,41 @@ jobs:
 
 
     - name: Build and Push Docker Image
+      id: build
       run: |
-        docker build --build-arg TAG=${{ needs.check-new-tags.outputs.new_tag }} -t davidecavestro/usql:${{ needs.check-new-tags.outputs.new_tag }} .
-        docker push davidecavestro/usql:${{ needs.check-new-tags.outputs.new_tag }}
+        docker buildx build \
+          --cache-from=type=local,src=/tmp/.buildx-cache \
+          --cache-to=type=local,dest=/tmp/.buildx-cache-new,mode=max \
+          --build-arg TAG=${{ needs.check-new-tags.outputs.new_tag }} \
+          --tag davidecavestro/usql:${{ needs.check-new-tags.outputs.new_tag }} \
+          --tag davidecavestro/usql:latest \
+          --tag ghcr.io/davidecavestro/usql:${{ needs.check-new-tags.outputs.new_tag }} \
+          --tag ghcr.io/davidecavestro/usql:latest \
+          --push .
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+        echo "image_tag=${{ needs.check-new-tags.outputs.new_tag }}" >> $GITHUB_ENV
+        echo "image_tag=${{ needs.check-new-tags.outputs.new_tag }}" >> $GITHUB_OUTPUT
 
-    - name: Tag and Push Docker Image to GitHub Container Registry
-      run: |
-        docker tag davidecavestro/usql:${{ needs.check-new-tags.outputs.new_tag }} ghcr.io/davidecavestro/usql:${{ needs.check-new-tags.outputs.new_tag }}
-        docker push ghcr.io/davidecavestro/usql:${{ needs.check-new-tags.outputs.new_tag }}
+  create-release:
+    runs-on: ubuntu-latest
+    needs: build-and-push-docker-image
+    if: ${{ needs.build-and-push-docker-image.outputs.image_tag != '' }}
 
-    - name: Create Release
+    steps:
+    - name: Create GitHub Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ needs.check-new-tags.outputs.new_tag }}
-        release_name: v${{ needs.check-new-tags.outputs.new_tag }}
+        tag_name: ${{ needs.build-and-push-docker-image.outputs.new_tag }}
+        release_name: ${{ needs.build-and-push-docker-image.outputs.new_tag }}
         body: |
-          This release provides the container image:
-          `davidecavestro/usql:${{ needs.check-new-tags.outputs.new_tag }}`
+          Container images for this release:
+          - Docker Hub: `davidecavestro/usql:${{ needs.build-and-push-docker-image.outputs.new_tag }}`
+          - GitHub Container Registry: `ghcr.io/davidecavestro/usql:${{ needs.build-and-push-docker-image.outputs.new_tag }}`
+
         draft: false
         prerelease: false
 
