--- a/.github/workflows/check-new-tags.yml
+++ b/.github/workflows/check-new-tags.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Fetch Tags from Source Repository
       run: |
@@ -30,8 +30,10 @@ jobs:
         else
           tail -n 1 tags.txt > new_tag.txt
         fi
-        echo "new_tag=$(cat new_tag.txt)" >> $GITHUB_ENV
-        echo "new_tag=$(cat new_tag.txt)" >> $GITHUB_OUTPUT
+        new_tag=$(cat new_tag.txt)
+        echo "new_tag=$new_tag" >> $GITHUB_ENV
+        echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
+        cat $GITHUB_OUTPUT
 
     - name: Store Current Tags
       run: |
@@ -56,50 +58,50 @@ jobs:
     needs: check-new-tags
     if: ${{ needs.check-new-tags.outputs.new_tag != '' }}
     outputs:
-      image_tag: ${{ steps.build.outputs.image_tag }}
+      image_tag: ${{ steps.expose.outputs.image_tag }}
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Cache Docker layers
-      id: cache-docker-layers
-      uses: actions/cache@v3
+      uses: docker/setup-buildx-action@v3
       with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
+        driver-opts: image=moby/buildkit:latest
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
+        username: ${{ github.repository_owner }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Log in to GitHub Container Registry
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          build-args: |
+            TAG=${{ needs.check-new-tags.outputs.new_tag }}
+          tags: |
+            davidecavestro/usql:latest
+            davidecavestro/usql:${{ needs.check-new-tags.outputs.new_tag }}
+            ghcr.io/davidecavestro/usql:latest
+            ghcr.io/davidecavestro/usql:${{ needs.check-new-tags.outputs.new_tag }}
 
-    - name: Build and Push Docker Image
-      id: build
+    - name: Expose tag
+      id: expose
       run: |
-        docker buildx build \
-          --cache-from=type=local,src=/tmp/.buildx-cache \
-          --cache-to=type=local,dest=/tmp/.buildx-cache-new,mode=max \
-          --build-arg TAG=${{ needs.check-new-tags.outputs.new_tag }} \
-          --tag davidecavestro/usql:${{ needs.check-new-tags.outputs.new_tag }} \
-          --tag davidecavestro/usql:latest \
-          --tag ghcr.io/davidecavestro/usql:${{ needs.check-new-tags.outputs.new_tag }} \
-          --tag ghcr.io/davidecavestro/usql:latest \
-          --push .
-        rm -rf /tmp/.buildx-cache
-        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-        echo "image_tag=${{ needs.check-new-tags.outputs.new_tag }}" >> $GITHUB_ENV
-        echo "image_tag=${{ needs.check-new-tags.outputs.new_tag }}" >> $GITHUB_OUTPUT
+        image_tag=${{ needs.check-new-tags.outputs.new_tag }}
+        echo "image_tag=$image_tag" >> $GITHUB_ENV
+        echo "image_tag=$image_tag" >> $GITHUB_OUTPUT
+        cat $GITHUB_OUTPUT
 
   create-release:
     runs-on: ubuntu-latest
@@ -113,17 +115,18 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ needs.build-and-push-docker-image.outputs.new_tag }}
-        release_name: ${{ needs.build-and-push-docker-image.outputs.new_tag }}
+        tag_name: ${{ needs.build-and-push-docker-image.outputs.image_tag }}
+        release_name: ${{ needs.build-and-push-docker-image.outputs.image_tag }}
         body: |
           Container images for this release:
-          - Docker Hub: `davidecavestro/usql:${{ needs.build-and-push-docker-image.outputs.new_tag }}`
-          - GitHub Container Registry: `ghcr.io/davidecavestro/usql:${{ needs.build-and-push-docker-image.outputs.new_tag }}`
-
+          - Docker Hub: `davidecavestro/usql:${{ needs.build-and-push-docker-image.outputs.image_tag }}`
+          - GitHub Container Registry: `ghcr.io/davidecavestro/usql:${{ needs.build-and-push-docker-image.outputs.image_tag }}`
         draft: false
         prerelease: false
 
-
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+  
     - name: Docker Hub Description
       uses: peter-evans/dockerhub-description@v4
       with:
