--- a/.github/workflows/check-new-tags.yml
+++ b/.github/workflows/check-new-tags.yml
@@ -78,8 +78,12 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Log in to GitHub Container Registry
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+    - name: Log in to the Container registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build and push on alpine
       uses: docker/build-push-action@v5
